--- a/index.html
+++ b/index.html
@@ -5,10 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excel Sheet Project</title>
     <link rel="stylesheet" href="style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
   </head>
   <body>
-    <div class="file-action-container"></div>
-    <div class="cellprop-action-container"></div>
+    <div class="file-action-container">
+      <div class="file-action">File</div>
+      <div class="file-action">Home</div>
+      <div class="file-action">Insert</div>
+      <div class="file-action">Layout</div>
+      <div class="file-action">Help</div>
+    </div>
+    <div class="cellprop-action-container">
+      <span class="material-symbols-outlined"> content_copy </span>
+      <span class="material-symbols-outlined"> content_paste </span>
+      <span class="material-symbols-outlined"> content_cut </span>
+      <select class="font-family">
+        <option value="monospace">Monospace</option>
+        <option value="Sans-serif">Sans-serif</option>
+        <option value="heletica">Helvetica</option>
+        <option value="arial">Arial</option>
+      </select>
+      <select class="font-size" id="">
+        <option value="14">14</option>
+        <option value="16">16</option>
+        <option value="18">18</option>
+        <option value="20">20</option>
+      </select>
+      <span class="material-symbols-outlined"> format_bold </span>
+      <span class="material-symbols-outlined"> format_italic </span>
+      <span class="material-symbols-outlined"> format_underlined </span>
+      <span class="material-symbols-outlined"> format_align_left </span>
+      <span class="material-symbols-outlined"> format_align_center </span>
+      <span class="material-symbols-outlined"> format_align_right </span>
+    </div>
     <div class="formula-action-container"></div>
     <div class="grid-action-container"></div>
     <div class="sheet-action-container"></div>
